[metadata]
name = airavata_mft_sdk
version = 0.0.1-alpha2
author = Airavata MFT Developers
author_email = dev@airavata.apache.org
description = Python SDK for Apache Airavata Managed File Transfers (MFT)
long_description = Python SDK for Apache Airavata Managed File Transfers (MFT)
url = https://github.com/apache/airavata-mft
project_urls =
    Bug Tracker = https://github.com/apache/airavata-mft/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires=
    grpcio>='1.44.0'
    grpcio-tools>='1.44.0'

[options.packages.find]
where = src