[tool.poetry]
name = "airavata-mft-cli"
version = "0.1.3"
description = "Command Line Client for Airavata MFT data transfer framework"
authors = ["Dimuthu Wannipurage <dimuthu.upeksha2@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
mft = "airavata_mft_cli.main:app"

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.7.0"}
pick = {version= "2.2.0"}
grpcio= {version="1.46.3"}
grpcio-tools = {version="1.46.3"}
airavata_mft_sdk= {version="0.0.1-alpha21"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
